Improved date/location formatting and added sections

--- a/perso.yaml
+++ b/perso.yaml
@@ -53,11 +53,11 @@ conference_presentations:
     date: June 7-13, 2025
     location: New London, New Hampshire
     title: Haitian Mangroves' Climate Resilience and Performance for Storm Surge Attenuation
-    type: Seminar Talk
+    type: Seminar Talk and Poster Presentation
   - name: Caribbean Studies Association (CSA) Conference 2024
     date: June 3-7, 2024
     location: Rodney Bay, Saint-Lucia
-    title: "Constructing Just Futures: Navigating Climate Adaptation, Infrastructure, and Resource Stewardship in the Caribbean \nMangrove Forests as Natural Coastal Defense in Haiti."
+    title: "Constructing Just Futures: Navigating Climate Adaptation, Infrastructure, and Resource Stewardship in the Caribbean | \nMangrove Forests as Natural Coastal Defense in Haiti."
     type: Panel Presentation Participant
   - name: Coastal Ocean Dynamics - Gordon Research Conference 2023
     date: June 18-23, 2023
@@ -67,15 +67,106 @@ conference_presentations:
   
 
 professional_experience:
+  - position: Engineer, Water Resources
+    institution: California Department of Water Resources
+    date: October 2025 - Present
+    location: Sacramento, CA
+    supervisors: Kijin Nam, Ph.D., P.E.
+    responsibilities:
+    - Develop tool for bayesian inference of longfin smelt hatching locations and population estimates in the Sacramento-San Joaquin Delta using SCHISM hydrodynamic model outputs, OceanTracker particle tracking simulations and Stan model.
+    - Participate in the development of the suxarray library.
+    - Data analysis and visualization of hydrodynamic model outputs for water resources management and other applications.
+    - Collaborate with interdisciplinary teams to support water resources projects.
+  
 
 research_experience:
+  - position: Graduate Student Researcher 
+    institution: University of California, Berkeley | Environmental Fluid Mechanics and Hydrology Group
+    date: January 2021 - October 2025
+    location: Berkeley, CA
+    supervisors: Prof. Mark T. Stacey
+    responsibilities:
+    - Developed remote sensing methodologies for quantifying mangrove forest health and voerage using Planet Labs satellite imagery and Python-based workflow.
+    - Implemented ADCIRC hydrodynamic model to simulate hurricane-induced storm surges in Gulf of Gonave, Haiti.
+    - Conducted spatiotemporal analysis of mangrove-storm surge interactions using couple remote sensing and numerical modeling approaches.
+    - Collaborated on sea-level rise adaptation study for San Rafael, CA, providing geospatial analysis and visualization expertise.
+    - Mentored undergraduate and graduate student researchers in remote sensing and geospatial data analysis techniques.
+
+  - position: Undergraduate Research Assistant
+    institution: Stony Brook University | Environmental Engineering and Science Laboratory
+    date: October 2019 - March 2020
+    location: Stony Brook, NY
+    supervisors: Sarah Lotfikatouli, Ph.D.
+    responsibilities:
+    - Conducted laboratory experiements on nitrogen removal from on-site wastewater treatment using membrane bioreactors.
+    - Performed water quality analysis using spectrophotometry, dissolved oxygen measurements, and bacterial enumeration.
+    - Evaluated membrane filter effectiveness through contact angle measurements for MBR optimization.
+
 
 teaching_experience:
+  - position: Teaching Assistant 
+    course: Engineering Data Analysis (CE93)
+    institution: University of California, Berkeley
+    date: Spring 2024
+    responsibilities: Led laboratory sections, held office hours, proctored exams, and assisted with course technologies.
+  - position: Teaching Assistant
+    course: Environmental Fluid Mechanics I (CE200A)
+    institution: University of California, Berkeley
+    date: Fall 2022
+    responsibilities: Led discussion sections, held office hours, graded assignments, managed course page and course technologies.
+  - position: Reader/Teaching Assistant
+    course: Environmental Fluid Mechanics II (CE200B)
+    institution: University of California, Berkeley
+    date: Spring 2022
+    responsibilities: Held office hours, graded assignments, and managed course technologies
+  - position: Reader
+    course: Environmental Fluid Mechanics I (CE200A)
+    institution: University of California, Berkeley
+    date: Fall 2021
+    responsibilities: Graded assignments and provided feedback to students.
+
 
 technical_skills:
+  programming:
+    - Python (numpy, pandas, xarray, scikit-learn, etc.)
+    - MATLAB
+    - bash/shell scripting
+    - QGIS and ArcGIS Pro
+    - Git version control
+    - LaTeX and Typst (this CV was made with Typst!)
+    - Linux and HPC environments
+    - HTML/CSS/Django experience
+  modeling:
+    - ADCIRC
+    - SCHISM
+    - Delft3D FM
+    - OceanTracker
+    - Remote sensing data processing (Planet, Landsat, Sentinel-2)
+    - Geospatial analysis (GDAL, rasterio, geopandas)
 
 awards_and_honors:
+  - name:
+    institution:
+    date:
+
+certifications:
+  - name:
+    institution:
+    date:
 
 service_and_leadership:
+  - position:
+    organization:
+    date:
+    responsibilities:
 
 languages:
+  - native:
+    - French,
+    - Haitian Creole
+    fluent:
+    - English
+    proficient:
+    conversational:
+    basic:
+    - Spanish
